# whastapp-mcp

./: README.md  claude_desktop_config.example.json  docker-compose.yml  pyproject.toml
.kilocode/: mcp.json  rules.md
docs/: ARCHITECTURE.md  INFRASTRUCTURE.md  RESEARCH.md
src/whatsapp_mcp/: __init__.py  cli.py  embeddings.py  milvus_client.py  models.py  parser.py  server.py
